Update index.html with link to first recipe page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Odin Recipes - Italian-American Classics</h1>
+        <a href="recipes/redsauce.html">Red Sauce</a>
     </body>
 
 </html>
