Build out red sauce page with draft content

--- a/recipes/redsauce.html
+++ b/recipes/redsauce.html
@@ -8,7 +8,66 @@
     </head>
 
     <body>
+
         <h1>Classic Red Sauce</h1>
+
+        <img src="../img/redsauce.jpg" alt="Mason jars full of bright-red tomato sauce" width="300">
+
+        <h2>Description</h2>
+            <p>
+                A delicious tomato sauce is the foundation of so many beloved Italian-American recipes. 
+                Whether served with tender, perfectly seasoned meatballs, ladled across each layer of a lasagna, 
+                spooned over a portion of chicken parmesan before it's finished under the broiler, 
+                or simply tossed with your favorite pasta shape and topped with freshly grated cheese, 
+                a killer red sauce is the workhorse of any respectable Italian-American kitchen.
+            </p>
+
+            <p>
+                The components of this red sauce, which is based on Marcella Hazan's famous recipe for ragù alla bolognese but is somewhat saucier,
+                might appear simple, but it is of utmost important that all your ingredients be as fresh and vibrant as possible.
+                Use only the best vegetables and meat you can find, and you will be rewarded with a sauce so deeply flavorful
+                that even Nonna would be proud.
+            </p>
+
+        <h2>Ingredients</h2>
+            
+            <ul>
+                <li>1 tbsp <strong>neutral oil</strong></li>
+                <li>3 tbsp <strong>unsalted butter</strong></li>
+                <li>1/2 cup <strong>yellow onion</strong>, finely diced</li>
+                <li>1/2 cup <strong>celery</strong>, finely diced</li>
+                <li>1/2 cup <strong>carrot</strong>, finely diced</li>
+                <li>1/2 lb <strong>ground beef</strong></li>
+                <li>1 cup <strong>dry white wine</strong></li>
+                <li>3 tbsp <strong>crème fraîche</strong>, plus 1 cup water</li>
+                <li>2 1/2 <strong>canned tomatoes with their juice</strong>, <em>or</em> 2 cups imported Italian <strong>passata di pomodoro</strong> (tomato purée)</li>
+                <li><strong>Salt</strong></li>
+                <li><strong>Pepper</strong></li>
+            </ul>
+
+        <h2>Steps</h2>
+
+            <p>
+                <em>Note:</em> For a vegetarian version of this recipe, simply omit the beef! (And to make it vegan, ditch the butter and crème fraîche liquid; you can use 3 tbsp olive oil and 1 cup vegetable stock instead, respectively.)
+            </p>
+
+            <ol>
+                <li>Add the oil and butter to a heavy-bottomed pot or Dutch oven set over medium heat.</li>
+                <li>Add the vegetables to the melted fat along with a pinch of salt and cook until softened, stirring very often to ensure they do not brown.</li>
+                <li>Once the vegetables are fully cooked, add the ground beef and another pinch of salt.</li>
+                <li>Turn up the heat to medium high and cook the meat, stirring very often and crumbling it with the back of a wooden spoon, just until it has lost its red color.</li>
+                <li>Whisk together the crème fraîche and water to get a smooth, milky liquid.</li>
+                <li>Once the beef is fully cooked, reduce the heat to medium and add the crème fraîche liquid to the pot. 
+                    Cook, stirring constantly, until the liquid has fully reduced and been absorbed by the meat.</li>
+                <li>Add the white wine and again allow the liquid to fully reduce while stirring frequently.</li>
+                <li>Once the wine has cooked off, add a grating of fresh nutmeg (about 1/8 tsp; several strokes across a Microplane-style grater should suffice).</li>
+                <li>Add the tomato, a healthy pinch of salt, and several grindings of black pepper, stir, and turn the heat back up to medium-high.</li>
+                <li>Allow the sauce to come up to a full, steady simmer, then reduce the heat to low, keeping it at the barest of simmers.</li>
+                <li>Simmer the sauce for a minimum of one hour, and up to three hours, stirring and tasting frequently. Keep adding salt until your mouth waters.</li>
+                <li>When you're satisfied with the flavor, serve the sauce immediately with your favorite pasta shape (cooked <em>al dente</em> and topped with freshly grated parmesan cheese, of course),
+                or cool and store in the refrigerator for up to a week. This sauce also freezes quite well!</li>
+            </ol>
+
     </body>
     
 </html>
