Build out meatball page with draft content

--- a/recipes/redsauce.html
+++ b/recipes/redsauce.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes - Red Sauce</title>
+        <title>Odin Recipes - Italian-American Classics - Red Sauce</title>
     </head>
 
     <body>
@@ -14,20 +14,17 @@
         <img src="../img/redsauce.jpg" alt="Mason jars full of bright-red tomato sauce" width="300">
 
         <h2>Description</h2>
-            <p>
-                A delicious tomato sauce is the foundation of so many beloved Italian-American recipes. 
+
+            <p>A delicious tomato sauce is the foundation of so many beloved Italian-American recipes. 
                 Whether served with tender, perfectly seasoned meatballs, ladled across each layer of a lasagna, 
                 spooned over a portion of chicken parmesan before it's finished under the broiler, 
                 or simply tossed with your favorite pasta shape and topped with freshly grated cheese, 
-                a killer red sauce is the workhorse of any respectable Italian-American kitchen.
-            </p>
+                a killer red sauce is the workhorse of any respectable Italian-American kitchen.</p>
 
-            <p>
-                The components of this red sauce, which is based on Marcella Hazan's famous recipe for ragù alla bolognese but is somewhat saucier,
+            <p>The components of this red sauce, which is based on Marcella Hazan's famous recipe for ragù alla bolognese but is somewhat saucier,
                 might appear simple, but it is of utmost important that all your ingredients be as fresh and vibrant as possible.
                 Use only the best vegetables and meat you can find, and you will be rewarded with a sauce so deeply flavorful
-                that even Nonna would be proud.
-            </p>
+                that even Nonna would be proud.</p>
 
         <h2>Ingredients</h2>
             
@@ -48,7 +45,8 @@
         <h2>Steps</h2>
 
             <p>
-                <em>Note:</em> For a vegetarian version of this recipe, simply omit the beef! (And to make it vegan, ditch the butter and crème fraîche liquid; you can use 3 tbsp olive oil and 1 cup vegetable stock instead, respectively.)
+                <em>Note:</em> For a vegetarian version of this recipe, simply omit the beef (if you're serving the sauce with <a href="meatballs.html">meatballs</a>, this might be the move). 
+                To make it vegan, ditch the butter and crème fraîche liquid as well; you can use 3 tbsp olive oil and 1 cup vegetable stock in their place, respectively.
             </p>
 
             <ol>
