--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8"> 
         <title>Odin Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes - Italian-American Classics</h1>
-        <a href="recipes/redsauce.html">Red Sauce</a>
+
+            <p>These are a few key recipes for any Italian-American kitchen:</p>
+
+            <ul>
+                <li><a href="recipes/redsauce.html">Classic Red Sauce</a></li>
+                <li><a href="recipes/meatballs.html">Meatballs</a></li>
+                <li><a href="recipes/garlicbread.html">Garlic Bread</a></li>
+            </ul>
+        
     </body>
 
 </html>
