Build out the draft content for garlicbread.html
Completed the garlic bread page using the same format as the other recipes.
Also added "Home" links at the bottom of each recipe page to bring user back to index.html.

--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -11,21 +11,38 @@
         
         <h1>Garlic Bread</h1>
 
-        <img src="" alt="" width="">
+        <img src="../img/garlicbread.jpg" alt="Small rounds of parsley-flecked garlic bread baking in the oven" width="300">
 
         <h2>Description</h2>
+
+            <p>No appetizer is as beloved in Italian-American homes and restaurants as garlic bread. And though garlic bread might seem incredibly easy to make, it actually requires some finesse.
+                Whether it's best to simply rub the bread with garlic cloves, or to chop or even grate the garlic; how much oil and parmesan (or mozzarella) to use; even the way that one slices the bread are all up for debate.
+                Below you'll find our fool-proof recipe for classic, crowd-pleasing garlic bread.
+            </p>
 
         <h2>Ingredients</h2>
 
             <ul>
-                <li></li>
+                <li>1 <strong>baguette</strong></li>
+                <li>1/2 cup <strong>extra-virgin olive oil</strong></li>
+                <li>4 cloves <strong>garlic</strong>, grated</li>
+                <li>1/2 cup finely grated <strong>Parmesan</strong></li>
+                <li>packed 1/4 cup <strong>finely chopped parsley</strong></li>
+                <li>1/4 tsp <strong>salt</strong></li>
+                <li>Freshly ground<strong>black pepper</strong></li>
             </ul>
 
         <h2>Steps</h2>
 
             <ol>
-                <li></li>
+                <li>Heat oven to 400F.</li>
+                <li>Whisk together olive oil, garlic, Parmesan, parsley, salt, and several generous grindings of black pepper in a bowl.</li>
+                <li>Use a bread knife to cut 1 inch rounds across the loaf, then arrange these slices evenly on a sheet tray lined with parchment paper</li>
+                <li>Use a brush to evenly spread the oil, garlic, and Parmesan mixture over the arranged bread slices.</li>
+                <li>Bake bread until perfectly golden, about 10 minutes.</li>
             </ol>
+
+        <a href="../index.html">Click here</a> to return home.
             
     </body>
 
