--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -16,7 +16,7 @@
         <h2>Description</h2>
 
             <p>Meatballs are another must-have recipe for any self-respecting Italian-American kitchen. This is an all-purpose recipe for delicious meatballs:
-                serve them in <a href="redsauce.html">red sauce</a> alongside freshly cooked pasta, as a side dish topped with freshly grated parmesan, black pepper, and a shower of chopped parsley,
+                serve them in <a href="redsauce.html">red sauce</a> alongside freshly cooked pasta, as a side dish topped with freshly grated Parmesan, black pepper, and a shower of chopped parsley,
                 or just eat them straight off the baking tray before they even reach the table -- we won't judge you. 
             </p>
 
@@ -30,7 +30,7 @@
                 <li>1 packed cup <strong>fresh parsley</strong></li>
                 <li>3 tbsp <strong>capers</strong>, drained and rinsed</li>
                 <li>1 large <strong>egg</strong></li>
-                <li>1/2 cup <strong>freshly grated parmesan</strong></li>
+                <li>1/2 cup <strong>freshly grated Parmesan</strong></li>
                 <li>1 tsp <strong>red pepper flakes</strong></li>
                 <li>1 tsp <strong>freshly ground black pepper</strong></li>
                 <li>2 tsp <strong>salt</strong></li>
@@ -43,20 +43,22 @@
         <h2>Steps</h2>
 
             <ol>
-                <li>Preheat oven to 425F.</li>
+                <li>Heat oven to 425F.</li>
                 <li>Finely grate garlic into a medium bowl using a Microplane or other rasp-style grater.</li>
                 <li>Finely chop the parsley and add it to the bowl.</li>
                 <li>Finely chop capers and add to bowl.</li>
-                <li>Whisk together egg, red pepper flakes, black pepper, salt, parmesan, and extra-virgin olive oil and add to bowl.</li>
+                <li>Whisk together egg, red pepper flakes, black pepper, salt, Parmesan, and extra-virgin olive oil and add to bowl.</li>
                 <li>Stir the panko (or fine breadcrumbs) into the mix until fully incorporated.</li>
                 <li><em>Gently</em> stir the ground beef into the mixture until fully incorporated, <strong>then stop</strong>. 
                     Overmixing will cause the meatballs to toughen up as they cook.</li>
                 <li>Spread the neutral oil over a sheet tray, gently form the meatball mixture into 1 1/2" balls, and evenly space them on the tray.</li>
                 <li>Bake meatballs for 10-15 minutes, agitating the pan after 6-7 minutes. They should be brown and crispy on all sides. 
                     It's okay (desireable, even) if there is still a little redness in the center of the meatballs when you take them out.</li>
-                <li>Remove meatballs from the oven and add directly to already-made red sauce, or transfer to a platter and top with additional chopped parsley and freshly grated parmesan to serve as a standalone side.</li>
+                <li>Remove meatballs from the oven and add directly to already-made red sauce, or transfer to a platter and top with additional chopped parsley and freshly grated Parmesan to serve as a standalone side.</li>
 
             </ol>
+
+        <a href="../index.html">Click here</a> to return home.
             
     </body>
 
