--- a/recipes/redsauce.html
+++ b/recipes/redsauce.html
@@ -17,7 +17,7 @@
 
             <p>A delicious tomato sauce is the foundation of so many beloved Italian-American recipes. 
                 Whether served with tender, perfectly seasoned meatballs, ladled across each layer of a lasagna, 
-                spooned over a portion of chicken parmesan before it's finished under the broiler, 
+                spooned over a portion of chicken Parmesan before it's finished under the broiler, 
                 or simply tossed with your favorite pasta shape and topped with freshly grated cheese, 
                 a killer red sauce is the workhorse of any respectable Italian-American kitchen.</p>
 
@@ -62,9 +62,11 @@
                 <li>Add the tomato, a healthy pinch of salt, and several grindings of black pepper, stir, and turn the heat back up to medium-high.</li>
                 <li>Allow the sauce to come up to a full, steady simmer, then reduce the heat to low, keeping it at the barest of simmers.</li>
                 <li>Simmer the sauce for a minimum of one hour, and up to three hours, stirring and tasting frequently. Keep adding salt until your mouth waters.</li>
-                <li>When you're satisfied with the flavor, serve the sauce immediately with your favorite pasta shape (cooked <em>al dente</em> and topped with freshly grated parmesan cheese, of course),
+                <li>When you're satisfied with the flavor, serve the sauce immediately with your favorite pasta shape (cooked <em>al dente</em> and topped with freshly grated Parmesan cheese, of course),
                 or cool and store in the refrigerator for up to a week. This sauce also freezes quite well!</li>
             </ol>
+
+        <a href="../index.html">Click here</a> to return home.
 
     </body>
     
