Add image to index page
Added a photo to the homepage and made some minor text edits.

--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -16,8 +16,8 @@
         <h2>Description</h2>
 
             <p>No appetizer is as beloved in Italian-American homes and restaurants as garlic bread. And though garlic bread might seem incredibly easy to make, it actually requires some finesse.
-                Whether it's best to simply rub the bread with garlic cloves, or to chop or even grate the garlic; how much oil and parmesan (or mozzarella) to use; even the way that one slices the bread are all up for debate.
-                Below you'll find our fool-proof recipe for classic, crowd-pleasing garlic bread.
+                Whether it's best to simply rub the bread with garlic cloves or to chop the garlic, how much oil and parmesan (or mozzarella) to use, and even the way that one slices the bread are all questions up for debate.
+                Of course, there's no single correct method, but below you'll find a fool-proof recipe for classic, crowd-pleasing garlic bread.
             </p>
 
         <h2>Ingredients</h2>
