--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     </head>
 
     <body>
-        <h1>Odin Recipes - Italian-American Classics</h1>
+        <h1>Odin Recipe Project - Italian-American Classics</h1>
 
-            <p>These are a few key recipes for any Italian-American kitchen:</p>
+            <img src="img/home.jpg" alt="Tomatoes, pasta, and other Italian cooking ingredients spread out on a white tablecloth" width="300">
+
+            <p>Here you will find some classic Italian-American recipes:</p>
 
             <ul>
-                <li><a href="recipes/redsauce.html">Classic Red Sauce</a></li>
+                <li><a href="recipes/redsauce.html">Red Sauce</a></li>
                 <li><a href="recipes/meatballs.html">Meatballs</a></li>
                 <li><a href="recipes/garlicbread.html">Garlic Bread</a></li>
             </ul>
