--- a/recipes/redsauce.html
+++ b/recipes/redsauce.html
@@ -9,7 +9,7 @@
 
     <body>
 
-        <h1>Classic Red Sauce</h1>
+        <h1>Red Sauce</h1>
 
         <img src="../img/redsauce.jpg" alt="Mason jars full of bright-red tomato sauce" width="300">
 
