Fix typo in meatballs.html

--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -53,7 +53,7 @@
                     Overmixing will cause the meatballs to toughen up as they cook.</li>
                 <li>Spread the neutral oil over a sheet tray, gently form the meatball mixture into 1 1/2" balls, and evenly space them on the tray.</li>
                 <li>Bake meatballs for 10-15 minutes, agitating the pan after 6-7 minutes. They should be brown and crispy on all sides. 
-                    It's okay (desireable, even) if there is still a little redness in the center of the meatballs when you take them out.</li>
+                    It's okay (desirable, even) if there is still a little redness in the center of the meatballs when you take them out.</li>
                 <li>Remove meatballs from the oven and add directly to already-made red sauce, or transfer to a platter and top with additional chopped parsley and freshly grated Parmesan to serve as a standalone side.</li>
 
             </ol>
