Begin styling site with CSS
Established basic CSS infrastructure, started playing around with different design ideas on the homepage, solved some spacing issues by adjusting padding for specific elements

--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <head>
         <meta charset="UTF-8"> 
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipe Project - Italian-American Classics</h1>
+        <h1 class="pagetitle"><span id="hometitle">Odin Recipe Project</span></h1>
+        <h2 class="pagesubtitle"><span id="homesubtitle"><span id="italian">Italian</span>-<span id="american">American</span> <span id="classics">Classics</span></span></h2>
 
-            <img src="img/home.jpg" alt="Tomatoes, pasta, and other Italian cooking ingredients spread out on a white tablecloth" width="300">
+            <img src="img/home.jpg" id="homeimage" alt="Tomatoes, pasta, and other Italian cooking ingredients spread out on a white tablecloth" width="300">
 
-            <p>Here you will find some classic Italian-American recipes:</p>
+            <p id="homeintro"><span id="homeintrotext">On this little website you will find some classic Italian-American recipes:</span></p>
 
-            <ul>
-                <li><a href="recipes/redsauce.html">Red Sauce</a></li>
-                <li><a href="recipes/meatballs.html">Meatballs</a></li>
-                <li><a href="recipes/garlicbread.html">Garlic Bread</a></li>
+            <ul id="linkslist">
+                <li><a href="recipes/redsauce.html"><span class="listelement">Red Sauce</span></a></li>
+                <li><a href="recipes/meatballs.html"><span>Meatballs</span></a></li>
+                <li><a href="recipes/garlicbread.html"><span>Garlic Bread</span></a></li>
             </ul>
         
     </body>
