--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -5,11 +5,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes - Italian-American Classics - Garlic Bread</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         
-        <h1>Garlic Bread</h1>
+        <h1 class="pagetitle">Garlic Bread</h1>
 
         <img src="../img/garlicbread.jpg" alt="Small rounds of parsley-flecked garlic bread baking in the oven" width="300">
 
