--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -5,11 +5,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes - Italian-American Classics - Meatballs</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         
-        <h1>Meatballs</h1>
+        <h1 class="pagetitle">Meatballs</h1>
 
         <img src="../img/meatballs.jpg" alt="Cook holding a quarter sheet tray full of beautifully browned meatballs" width="300">
 
