--- a/recipes/redsauce.html
+++ b/recipes/redsauce.html
@@ -5,11 +5,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes - Italian-American Classics - Red Sauce</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
 
-        <h1>Red Sauce</h1>
+        <h1 class="pagetitle">Red Sauce</h1>
 
         <img src="../img/redsauce.jpg" alt="Mason jars full of bright-red tomato sauce" width="300">
 
