Style meatballs.html and garlicbread.html to match other pages
Added CSS for garlic bread and meatballs pages to match redsauce.html and index.html. Fixed spacing for lists of ingredient/recipe steps and played around with a few little details (like text color/border color change when hovering over links on homepage).

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <p id="homeintro"><span id="homeintrotext">On this little website you will find some classic Italian-American recipes:</span></p>
 
             <ul id="linkslist">
-                <li><a href="recipes/redsauce.html"><span class="listelement" id="redsauce">Red Sauce</span></a></li>
-                <li><a href="recipes/meatballs.html"><span class="listelement" id="meatballs">Meatballs</span></a></li>
-                <li><a href="recipes/garlicbread.html"><span class="listelement" id="garlicbread">Garlic Bread</span></a></li>
+                <li class="homelinks"><a href="recipes/redsauce.html"><span class="listelement" id="redsauce">Red Sauce</span></a></li>
+                <li class="homelinks"><a href="recipes/meatballs.html"><span class="listelement" id="meatballs">Meatballs</span></a></li>
+                <li class="homelinks"><a href="recipes/garlicbread.html"><span class="listelement" id="garlicbread">Garlic Bread</span></a></li>
             </ul>
         
     </body>
