--- a/recipes/garlicbread.html
+++ b/recipes/garlicbread.html
@@ -10,40 +10,41 @@
 
     <body>
         
-        <h1 class="pagetitle">Garlic Bread</h1>
+        <h1 class="pagetitle"><span class="titletext">Garlic Bread</span></h1>
 
         <img src="../img/garlicbread.jpg" alt="Small rounds of parsley-flecked garlic bread baking in the oven" width="300">
 
-        <h2>Description</h2>
+        <h2 class="recipe-subheading"><span class="subheading">Description</span></h2>
 
-            <p>No appetizer is as beloved in Italian-American homes and restaurants as garlic bread. And though garlic bread might seem incredibly easy to make, it actually requires some finesse.
-                Whether it's best to simply rub the bread with garlic cloves or to chop the garlic, how much oil and parmesan (or mozzarella) to use, and even the way that one slices the bread are all questions up for debate.
+            <p style="background-color: #004500; color: white; border-style: double; border-color: red; border-width: 5px;">No appetizer is as beloved in Italian-American homes and restaurants as garlic bread. 
+                And though garlic bread might seem incredibly easy to make, it actually requires some finesse.
+                Whether it's best to simply rub the bread with garlic cloves or to chop the garlic, how much oil and Parmesan (or mozzarella) to use, and the way that one slices the bread are all questions up for debate.
                 Of course, there's no single correct method, but below you'll find a fool-proof recipe for classic, crowd-pleasing garlic bread.
             </p>
 
-        <h2>Ingredients</h2>
+        <h2 class="recipe-subheading"><span class="subheading">Ingredients</span></h2>
 
-            <ul>
+            <ul style="color: black; background-color: white; border-style: double; border-color: green; border-width: 5px;">
                 <li>1 <strong>baguette</strong></li>
                 <li>1/2 cup <strong>extra-virgin olive oil</strong></li>
                 <li>4 cloves <strong>garlic</strong>, grated</li>
                 <li>1/2 cup finely grated <strong>Parmesan</strong></li>
                 <li>packed 1/4 cup <strong>finely chopped parsley</strong></li>
                 <li>1/4 tsp <strong>salt</strong></li>
-                <li>Freshly ground<strong>black pepper</strong></li>
+                <li>Freshly ground <strong>black pepper</strong></li>
             </ul>
 
-        <h2>Steps</h2>
+        <h2 class="recipe-subheading"><span class="subheading">Steps</span></h2>
 
-            <ol>
+            <ol style="background-color:#6e0101; color: white; border-style: double; border-color: green; border-width: 5px;">
                 <li>Heat oven to 400F.</li>
                 <li>Whisk together olive oil, garlic, Parmesan, parsley, salt, and several generous grindings of black pepper in a bowl.</li>
-                <li>Use a bread knife to cut 1 inch rounds across the loaf, then arrange these slices evenly on a sheet tray lined with parchment paper</li>
+                <li>Use a bread knife to cut 1 inch rounds across the loaf, then arrange these slices evenly on a sheet tray lined with parchment paper.</li>
                 <li>Use a brush to evenly spread the oil, garlic, and Parmesan mixture over the arranged bread slices.</li>
                 <li>Bake bread until perfectly golden, about 10 minutes.</li>
             </ol>
 
-        <a href="../index.html">Click here</a> to return home.
+        <div id="gohome"><span id="returnhome"><a href="../index.html">Click here</a> to return home.</span></div>
             
     </body>
 
