--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -10,22 +10,22 @@
 
     <body>
         
-        <h1 class="pagetitle">Meatballs</h1>
+        <h1 class="pagetitle"><span class="titletext">Meatballs</span></h1>
 
         <img src="../img/meatballs.jpg" alt="Cook holding a quarter sheet tray full of beautifully browned meatballs" width="300">
 
-        <h2>Description</h2>
+        <h2 class="recipe-subheading"><span class="subheading">Description</span></h2>
 
-            <p>Meatballs are another must-have recipe for any self-respecting Italian-American kitchen. This is an all-purpose recipe for delicious meatballs:
+            <p style="background-color: white; color: black; border-style: double; border-color: green; border-width: 5px;">Meatballs are another must-have recipe for any self-respecting Italian-American kitchen. This is an all-purpose recipe for delicious meatballs:
                 serve them in <a href="redsauce.html">red sauce</a> alongside freshly cooked pasta, as a side dish topped with freshly grated Parmesan, black pepper, and a shower of chopped parsley,
                 or just eat them straight off the baking tray before they even reach the table -- we won't judge you. 
             </p>
 
-        <h2>Ingredients</h2>
+        <h2 class="recipe-subheading"><span class="subheading">Ingredients</span></h2>
 
-            <p><em>Makes 4 servings</em></p>
+            <p><span id="servings"><em>Makes 4 servings</em></span></p>
 
-            <ul>
+            <ul style="color: white; background-color: #004500; border-style: double; border-color: green; border-width: 5px;">
                 <li>1 lb <strong>ground beef</strong></li>
                 <li>1 clove <strong>garlic</strong></li>
                 <li>1 packed cup <strong>fresh parsley</strong></li>
@@ -41,9 +41,9 @@
                 <li>1 <strong>lemon</strong></li>
             </ul>
 
-        <h2>Steps</h2>
+        <h2 class="recipe-subheading"><span class="subheading">Steps</span></h2>
 
-            <ol>
+            <ol style="background-color:#6e0101; color: white; border-style: double; border-color: green; border-width: 5px;">
                 <li>Heat oven to 425F.</li>
                 <li>Finely grate garlic into a medium bowl using a Microplane or other rasp-style grater.</li>
                 <li>Finely chop the parsley and add it to the bowl.</li>
@@ -59,7 +59,7 @@
 
             </ol>
 
-        <a href="../index.html">Click here</a> to return home.
+        <div id="gohome"><span id="returnhome"><a href="../index.html">Click here</a> to return home.</span></div>
             
     </body>
 
