--- a/recipes/redsauce.html
+++ b/recipes/redsauce.html
@@ -10,7 +10,7 @@
 
     <body>
 
-        <h1 class="pagetitle"><span id="redsaucetitle">Red Sauce</span></h1>
+        <h1 class="pagetitle"><span class="titletext">Red Sauce</span></h1>
 
         <img src="../img/redsauce.jpg" alt="Mason jars full of bright-red tomato sauce" width="300">
 
@@ -31,7 +31,7 @@
 
         <h2 class="recipe-subheading"><span class="subheading">Ingredients</span></h2>
             
-            <ul style="background-color: white; border-style: double; border-color: green; border-width: 5px;">
+            <ul style="color: white; background-color: #004500; border-style: double; border-color: red; border-width: 5px;">
                 <li>1 tbsp <strong>neutral oil</strong></li>
                 <li>3 tbsp <strong>unsalted butter</strong></li>
                 <li>1/2 cup <strong>yellow onion</strong>, finely diced</li>
